--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "fedev-api",
+  "name": "cicd-youtube",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "build": "  webpack --mode development",
+    "start:prod": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.11",
-    "nodemon": "^2.0.7"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
